src/common/style.scss
@import "leaflet/dist/leaflet.css";
@import "leaflet.markercluster/dist/MarkerCluster.css";

// Custom HyliaSerif font from https://artsyomni.com/hyliaserif
@font-face {
  font-family: HyliaSerif;
  src: url(@fonts/HyliaSerif-v0.009/HyliaSerifBetav0-009/HyliaSerifBeta-Regular.otf);
}

@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap");

@font-face {
  font-family: "OpenSansBold";
  font-style: bold;
  font-weight: 300;
  src: url("https://fonts.gstatic.com/s/opensans/v18/mem5YaGs126MiZpBA-UN7rgOUuhs.ttf");
}

/// Stroke font-character
/// @param  {Integer} $stroke - Stroke width
/// @param  {Color}   $color  - Stroke color
/// @return {List}            - text-shadow list
@function stroke($stroke, $color) {
  $shadow: ();
  $from: $stroke * -1;
  @for $i from $from through $stroke {
    @for $j from $from through $stroke {
      $shadow: append($shadow, $i * 1px $j * 1px 0 $color, comma);
    }
  }
  @return $shadow;
}

/// Stroke font-character
/// @param  {Integer} $stroke - Stroke width
/// @param  {Color}   $color  - Stroke color
/// @return {Style}           - text-shadow
@mixin stroke($stroke, $color) {
  text-shadow: stroke($stroke, $color);
}

html,
body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
}

#map {
  width: 100%;
  height: 100%;
}

.leaflet-container {
  background: #000000;
}

/* CONTROLS */

.zd-controls {
  height: 100vh;
  display: flex;
  font-family: "Open Sans", sans-serif;
}

.leaflet-left .zd-controls {
  margin-left: 0;
}

.leaflet-bottom .zd-controls {
  margin-bottom: 0;
}

.zd-controls__dock {
  height: 100vh;
  width: 40px;
  background: black;
  display: flex;
  flex-direction: column;
}

.zd-controls__dock__group {
  flex-direction: column;
  flex: 1;
}

.zd-controls__dock__group:nth-child(2) {
  display: flex;
  align-items: center;
}

.zd-control__button {
  margin: 5px;
  padding-top: 2px;
  width: 30px;
  height: 28px;
  line-height: 30px;
  font-size: 22px;
  text-align: center;
  color: white;
  background-size: contain;
  background-repeat: no-repeat;
  background-clip: padding-box;
  cursor: pointer;
}

.zd-control__button.selected {
  border-right: 5px solid white;
}

.zd-controls__pane-container {
  width: 0;
  height: 100%;
  overflow: hidden;
  background: rgba(0, 0, 0, 0.7);
  transition: width 0.2s;
}

.zd-controls__pane-container.visible {
  width: calc(100vw - 40px);
}

.zd-control__pane {
  display: none;
  margin: 5px;
  width: calc(100vw - 50px);
  height: 100%;
  color: white;
}

.zd-control__pane.visible {
  display: flex;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  .zd-controls__pane-container.visible {
    width: 330px;
  }

  .zd-control__pane {
    width: 320px;
  }
}

/* SEARCH CONTROL */

.zd-search__searchbox {
  box-sizing: border-box;
  height: 34px;
  min-height: 34px; // prevent flex from squishing it
  width: 100%;
  font-size: inherit;
}

.zd-search__results {
  display: flex;
  flex-direction: column;
  list-style: none;
  margin: none;
  padding: 0;
  overflow-y: auto;
}

.zd-search__results .zd-legend-group__body {
  column-count: 1;
}

/* FILTER/OBJECTS CONTROLS */

.zd-tabs {
  display: flex;
  flex-direction: row;
  margin: 0;
  padding: 0;
  width: 100%;
  justify-content: center;
}

.zd-tab {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-basis: 0;
  flex-grow: 1;
  height: 35px;
}

.zd-legend__categories {
  list-style: none;
  margin: 0;
  padding: 5px;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  overflow-y: auto;
}

.zd-legend-group__header {
  display: flex;
  flex-direction: row;
}

.zd-legend-group__title,
.zd-legend-group__dropdown {
  color: #e1d698;
  //Adds an outline to the text to make it stand out better
  margin: 0px 0px 0px 0px;
  font-family: "HyliaSerif", "OpenSansBold", "Open Sans", sans-serif;
  font-weight: lighter !important;
  filter: drop-shadow(-1px -1px 0px #000000) drop-shadow(1px -1px 0px #000000)
    drop-shadow(1px 1px 0px #000000) drop-shadow(-1px 1px 0px #000000);
}

.zd-legend-group__dropdown {
  margin-right: 5px;
}

.zd-legend-group__body {
  display: none;
  column-count: 2;
  list-style: none;
  padding: 0;
}

.zd-legend__category {
  display: flex;
  flex-grow: 1;
  align-items: center;
  height: 35px;
  background-repeat: no-repeat;
}

.zd-legend__category-div {
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: center;
}

//Changes color from black to target color for svg #e6e61d, and adds a black drop shadow
//https://codepen.io/sosuke/pen/Pjoqqp
.zd-legend__icon__svg,
.zd-marker-icon-svg {
  filter: invert(90%) sepia(51%) saturate(731%) hue-rotate(359deg)
    brightness(89%) contrast(104%) drop-shadow(-1px -1px 0px #000000)
    drop-shadow(1px -1px 0px #000000) drop-shadow(1px 1px 0px #000000)
    drop-shadow(-1px 1px 0px #000000);
}

//Fix SVG alignement with the custom fonts
.svg-inline--fa {
  vertical-align: -0.1em;
}

.toggleable {
  cursor: pointer;
  box-sizing: border-box;
  transition: background-color 0.2s;
}

.hideable {
  display: none;
}

.selectable {
  cursor: pointer;
  box-sizing: border-box;
  transition: background-color 0.2s;
  color: rgba($color: #ffffff, $alpha: 0.5);
}

.selected {
  text-decoration: none !important;
  color: rgba($color: #ffffff, $alpha: 1) !important;
}

/* SETTINGS CONTROL */

.zd-settings__setting {
  height: 30px;
}

.zd-settings__label {
  text-align: left;
}

.zd-settings__button {
  width: 50px;
  text-align: center;
}

//ZOOM
.leaflet-control a.leaflet-disabled {
  background-color: rgba(0, 0, 0, 0.8);
  color: #bbb;
  cursor: default;
}

/* TOAST */

.zd-toast-container {
  max-width: 100%;
  width: 500px;
}

.zd-toast {
  width: 100%;
  margin: 1em;
  padding: 1em;
  background-color: rgba(0, 0, 0, 0.75);
  color: white;
}

/* LOCATION TEXT LABELS */

.leaflet-tooltip-pane {
  z-index: 550; /* put location text labels underneath markers */
}

.leaflet-tooltip.zd-location-label {
  background-color: transparent;
  border: transparent;
  box-shadow: none;
}

.zd-map-botw .leaflet-tooltip.zd-location-label,
.zd-map-totk .leaflet-tooltip.zd-location-label {
  font-size: 18px;
  color: #f8efae;
  @include stroke(1, #977f41);
}

.zd-map-la .leaflet-tooltip.zd-location-label {
  font-size: 18px;
  font-style: italic;
  color: #fff6e6;
}

.zd-map-totk .leaflet-tooltip.zd-location-label--with-icon {
  font-size: 14px;
}

/* MARKERS */

.zd-marker-cluster > div {
  background-clip: padding-box;
  overflow: hidden;
}

.zd-marker-cluster > div > div {
  margin-left: 5px;
  margin-top: 5px;
  text-align: center;
  font: 12px "Helvetica Neue", Arial, Helvetica, sans-serif;
}

.zd-marker-cluster--small > div {
  width: 40px;
  height: 40px;
  border-radius: 20px;
}

.zd-marker-cluster--small > div > div {
  width: 30px;
  height: 30px;
  border-radius: 15px;
}

.zd-marker-cluster--small > div > div > span {
  line-height: 30px;
}

.zd-marker-cluster--medium > div {
  width: 50px;
  height: 50px;
  border-radius: 25px;
}

.zd-marker-cluster--medium > div > div {
  width: 40px;
  height: 40px;
  border-radius: 20px;
}

.zd-marker-cluster--medium > div > div > span {
  line-height: 40px;
}

.zd-marker-cluster--large > div {
  width: 60px;
  height: 60px;
  border-radius: 30px;
}

.zd-marker-cluster--large div > div {
  width: 50px;
  height: 50px;
  border-radius: 25px;
}

.zd-marker-cluster--large > div > div > span {
  line-height: 50px;
}

/* POPUPS */

.zd-popup__loading-indicator {
  text-align: center;
  color: white;
}

.zd-popup__footer {
  text-align: center;
  font-style: italic;
}

.zd-popup__controls {
  text-align: center;
  font-size: 18px;
}

.zd-popup__controls .zd-popup__control {
  color: white;
}

.zd-popup__controls .zd-popup__control:hover {
  color: #7f7f7f;
  cursor: pointer;
}

.zd-popup__control + .zd-popup__control,
.zd-popup__coordinate + .zd-popup__coordinate {
  margin-left: 18px;
}

.zd-popup__control--uncomplete {
  display: none;
}

.zd-popup__controls--completed .zd-popup__control--complete {
  display: none;
}

.zd-popup__controls--completed .zd-popup__control--uncomplete {
  display: inline-block;
  margin-left: 0;
}

.zd-popup__controls--noedit .zd-popup__control--edit {
  display: none;
}

.internal-link {
  border-bottom: 1px dashed white;
  cursor: pointer;
}

.zd-popup li.gallerybox {
  display: block;
}

.zd-popup__title {
  font-family: "HyliaSerif", "OpenSansBold", "Open Sans", sans-serif;
  font-weight: lighter;
}

//Wiki link
.zd-popup a {
  color: #0096ff;
}

//Contribute links eetc...
.leaflet-popup-content a {
  color: #0096ff;
}

.leaflet-popup-content-wrapper {
  background-color: rgba(0, 0, 0, 0.8);
}

.leaflet-popup-tip {
  background-color: rgba(0, 0, 0, 0.8);
}

.leaflet-popup-content {
  color: white;
}

.leaflet-container a.leaflet-popup-close-button {
  color: white;
}

.zd-popup__body {
  margin-bottom: 0.5em;
}

.zd-popup__footer {
  margin-bottom: 0.5em;
}

